# pyside-widget-reloader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
pyside-widget-reloader/src/: main.py  prepare_windows.py  window.py
pyside_widget_reloader/: __init__.py
pyside_widget_reloader/src/: main.py  module.py  window.py
src/: backlog.py  main.py  module.py  prepare_windows.py  window.py
src/pwreloader/: __init__.py  main.py  module.py
