[project]
name = "pyside-widget-reloader"
description = "Reloads pyside widget when changes are made to module file of the widget."
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.0.1"
requires-python = ">=3.6,<3.15"
dependencies = [
    "pyside6",
    "python-minifier",
    "ruff",
]

[tool.ruff]
select = ["I"]
line-length = 100

[tool.setuptools]
packages = ["pyside_widget_reloader"]
